Rails about fix layout bug
 - grid-auto-rows -> grid-template-rows
 - remove height set on grid
 - add height set on svg

--- a/rails/app/javascript/stylesheets/pages/_about.scss
+++ b/rails/app/javascript/stylesheets/pages/_about.scss
@@ -2,14 +2,13 @@
   justify-items: center;
   display: grid;
   grid-template-columns: 1fr;
-  grid-auto-rows: auto min-content 1fr;
-  grid-gap: 0;
+  grid-template-rows: auto auto 1fr;
+  grid-gap: 0 1.875rem;
   grid-template-areas:
     "main"
     "action"
     "skyline            "
   ;
-  height: 100vh;
 }
 
 .about {
